[package]
name = "advent14"
version = "0.1.0"
authors = ["dialtone <dialtone@adroll.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "*"

[[bench]]
name = "bench"
harness = false

[profile.release]
debug = true
