[package]
name = "adv_bench"
version = "0.1.0"
authors = ["dialtone <dialtone@adroll.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8.2"
rand = "0.7.2"
async-std = { version = "1.4.0", features = ["attributes"] }
futures = "0.3.1"

[dev-dependencies]
criterion = "*"

[[bench]]
name = "bench"
harness = false

[profile.release]
debug = true
